Fixing the gap and line-height

--- a/projects/ar-vr/styles.css
+++ b/projects/ar-vr/styles.css
@@ -61,19 +61,20 @@ h1 a{
 
 #content {
     width: 1300px;
-    margin: 0 auto; 
+    margin: 2rem auto; 
     display: flex;
     flex-direction: column; 
     align-items: center; 
     justify-content: center; 
     min-height: 100vh;
+    line-height: 1.5;
 }
 
 .img-big{
     width: 780px;
     height: 440px;
     display: block;
-    margin: 4rem auto;
+    margin: 2rem auto;
     border: solid white 2px;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgb(0, 0, 0, 0.1);
@@ -84,7 +85,7 @@ h1 a{
     height: 440px;
     padding: 45px;
     display: block;
-    margin: 0 auto;
+    margin: 3rem auto;
     border: solid rgb(177, 177, 177) 3px;
 }
 
@@ -97,8 +98,8 @@ h1 a{
 
 h1, h2{
     text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 #introduction h2, #project-overview h2{
@@ -110,7 +111,7 @@ h1, h2{
     height: 548px;
     padding: 60px;
     display: block;
-    margin: 0 auto;
+    margin: 3rem auto;
     border: solid rgb(177, 177, 177) 3px;
     border-radius: 5px;
     display: flex;
@@ -154,7 +155,7 @@ h1, h2{
     border: solid rgb(99, 99, 99) 3px;
     border-collapse: collapse;
     width: 90%;
-    margin: 20px auto;
+    margin: 4rem auto;
 }
 
 th, td {
@@ -208,6 +209,7 @@ thead th {
     grid-template-rows: repeat(3,1fr);
     /* grid-template-rows: auto 4rem auto; */
     grid-template-columns: repeat(3,1fr);
+    margin: 2rem auto;
 }
 
 .emily {
@@ -272,6 +274,9 @@ thead th {
     margin-bottom: 4.5rem;
     margin-left: 2.5rem;
 }
+#digital-wireframe{
+    margin-top: 3rem;
+}
 
 .prototype-img--style{
     padding: 2rem;
@@ -280,7 +285,8 @@ thead th {
     align-items: center;
     grid-template-rows: repeat(2, 0.1fr);
     grid-template-columns: repeat(2, 0.1fr);
-    gap: 1rem;
+    gap: 2rem;
+    margin-top: 2rem;
 }
 
 #prototype-img img{
